# schmidt22

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml
docs/: 1-setup.ipynb  2-design-experiment.ipynb  3-perform-experiment.ipynb  4-analyze-assay.ipynb  5-bfx.ipynb  6-compbio.ipynb  api.md  changelog.md
docs/guide/: quickstart.ipynb
docs/project-flow-scripts/: cellranger.py  chromium_10x_upload.py  postprocess_cellranger.py
docs/project-flow-scripts/lamindata/perturbseq/: cloupe.cloupe  filtered_feature_bc_matrix.h5  molecule_info.h5  possorted_genome_bam.bam  possorted_genome_bam.bam.bai  raw_feature_bc_matrix.h5  web_summary.html
notebooks/: analyze_gws_crispr_ifng_readout.ipynb  analyze_scrna_joined_on_ifng_readout.ipynb  curate_gws_crispr_ifng_readout.ipynb
rnd_demo/: __init__.py
scripts/: cellranger.py  chromium_10x_upload.py  define_entities.py  define_features_types.py  define_types_and_features.py  define_types_features_labels.py  postprocess_cellranger.py  register_chromium_10x_upload.py  run_cellranger_count.py  run_count_matrix_normalization.py  run_postprocess_cellranger.py  run_scrna_normalization_clustering.py
tests/: test_base.py  test_notebooks.py
