[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rnd_demo"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "lamindb[bionty,jupyter]",
]

[project.urls]
Home = "https://github.com/laminlabs/rnd-demo"

[project.optional-dependencies]
dev = [
    "laminci",
    "pre-commit",
    "nox",
    "pytest>=6.0",
    "pytest-cov",
    "nbproject_test",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
